Last modifications before printing.

--- a/latex/thesis_template/thesis.bib
+++ b/latex/thesis_template/thesis.bib
@@ -489,6 +489,12 @@ year = {2015}
   title = {{README, listing the different drafts on the control plane}},
   howpublished = {DEDIS Github, \url{https://github.com/dedis/student_19_nyleCtrlPlane/blob/master/README.md}},
 }
+@misc{ArnaudPannatierWorks2019,
+  author = {Arnaud Pannatier},
+  title = {{README, listing the different drafts on the control plane}},
+  howpublished = {DEDIS Github, \url{https://github.com/dedis/student_19_nyleCtrlPlane/blob/master/README.md}},
+}
+
 @article{Lumezanu2009,
 abstract = {Triangle inequality violations (TIVs) are the effect of packets between two nodes being routed on the longer direct path between them when a shorter detour path through an intermediary is available. TIVs are a natural, widespread and persistent consequence of Internet routing policies. By exposing opportunities to improve the delay between two nodes, TIVs can help myriad applications that seek to minimize end-to-end latency. However, sending traffic along the detour paths revealed by TIVs may influence Internet routing negatively. In this paper we study the interaction between triangle inequality violations and policy routing in the Internet. We use measured and predicted AS paths between Internet nodes to show that 25{\%} of the detour paths exposed by TIVs are in fact available to BGP but are simply deemed "less efficient". We also compare the AS paths of detours and direct paths and find that detours use AS edges that are rarely followed by default Internet paths, while avoiding others that BGP seems to prefer. Our study is important both for understanding the various interactions that occur at the routing layer as well as their effects on applications that seek to use TIVs to minimize latency.},
 author = {Lumezanu, Cristian and Baden, Randy and Spring, Neil and Bhattacharje, Bobbye},
