--- a/latex/thesis_template/thesis.tex
+++ b/latex/thesis_template/thesis.tex
@@ -126,7 +126,7 @@ a global partition occurs, the system replicated in smaller regions that are
 not split by a partition can continue working flawlessly. 
 
 \begin{figure}[!h] \centering \includegraphics[width=400pt]{figures/Nyle}
-    \caption{Sketch of Nyle: The Blockchain is replicated across all regions}
+    \caption{Sketch of Nyle: The Blockchain is replicated across all regions.}
 \label{fig:Nyle}
 \end{figure}
 
@@ -1217,7 +1217,7 @@ perform some tests (pinging other nodes of one region) and publish the results.
 \begin{figure}[!h] 
 \centering
 \includegraphics[width=400pt]{figures/fog_of_war}
-\caption{Fog of war representation in a classic real-time strategy video game. \cite{ageofempire1999} }
+\caption{Fog of war representation in a classic real-time strategy video game \cite{ageofempire1999}. }
 \label{fig:fog-of-the-war}
 \end{figure}
 
@@ -1367,7 +1367,7 @@ than taking a bus from $A$ to $C$ [\autoref{fig:CFF-map}][\autoref{fig:CFF-NewDi
 \begin{figure}[!h] 
 \centering
 \includegraphics[width=450pt]{figures/mapCFF}
-\caption{Map of the train network in Switzerland, line width is proportional to
+\caption{Map of the train network in Switzerland, line-width is proportional to
     the number of connections per day. Three criteria were held for the
     selection of the cities: size, if they are a capital and my own
     preferences. There is an edge between two cities if there is a direct
@@ -1672,7 +1672,7 @@ systems.
 \textbf{5} & Node 5&$0$&$0$&$250.73$&$129.83$&$-64.90$&$200.00$&\\ \hdashline\midrule
 \bottomrule
 \end{tabular}
-\caption{Description of the system for Epoch 1}
+\caption{Description of the system for Epoch 1.}
 \end{table}
 
 \begin{table}[h]
@@ -1691,7 +1691,7 @@ systems.
 \textbf{7} & Node 7&$1$&$0$&$151.83$&$224.03$&$74.06$&$-31.92$&\\ \hdashline\midrule
 \bottomrule
 \end{tabular}
-\caption{Description of the system for Epoch 2}
+\caption{Description of the system for Epoch 2.}
 \end{table}
 
 \begin{table}[h]
@@ -1712,7 +1712,7 @@ systems.
 \textbf{9} & Node 9&$1$&$1$&$270.43$&$9.18$&$117.42$&$200.00$&\\ \hdashline\midrule
 \bottomrule
 \end{tabular}
-\caption{Description of the system for Epoch 3}
+\caption{Description of the system for Epoch 3.}
 \end{table}
 
 \begin{table}[h]
@@ -1735,7 +1735,7 @@ systems.
 \textbf{11} & Node 11&$0$&$0$&$281.74$&$114.36$&$43.01$&$200.00$&\\ \hdashline\midrule
 \bottomrule
 \end{tabular}
-\caption{Description of the system for Epoch 4}
+\caption{Description of the system for Epoch 4.}
 \end{table}
 
 \begin{table}[h]
@@ -1760,7 +1760,7 @@ systems.
 \textbf{13} & Node 13&$2$&$0$&$8.71$&$66.51$&$-74.01$&$200.00$&\\ \hdashline\midrule
 \bottomrule
 \end{tabular}
-\caption{Description of the system for Epoch 5}
+\caption{Description of the system for Epoch 5.}
 \end{table}
 
 \begin{table}[h]
@@ -1787,7 +1787,7 @@ systems.
 \textbf{15} & Node 15&$0$&$1$&$69.93$&$69.26$&$210.00$&$2.51$&\\ \hdashline\midrule
 \bottomrule
 \end{tabular}
-\caption{Description of the system for Epoch 6}
+\caption{Description of the system for Epoch 6.}
 \end{table}
 
 \begin{table}[h]
@@ -1816,7 +1816,7 @@ systems.
 \textbf{17} & Node 17&$1$&$0$&$100.00$&$20.72$&$111.23$&$-85.22$&\\ \hdashline\midrule
 \bottomrule
 \end{tabular}
-\caption{Description of the system for Epoch 7}
+\caption{Description of the system for Epoch 7.}
 \end{table}
 
 
@@ -1848,7 +1848,7 @@ systems.
 \textbf{19} & Node 19&$1$&$0$&$193.24$&$68.52$&$116.45$&$110.87$&\\ \hdashline\midrule
 \bottomrule
 \end{tabular}
-\caption{Description of the system for Epoch 8}
+\caption{Description of the system for Epoch 8.}
 \end{table}
 
 \chapter{Dataset on Master Thesis}
@@ -1868,7 +1868,7 @@ Total   & 47 & 1'732 & 3'279 & 7'241 \\
 \midrule
 \bottomrule
 \end{tabular}
-\caption{Line of code for the different languages used in that project}
+\caption{Line of code for the different languages used in that project.}
 \label{tab:my-table}
 \end{table}
 
@@ -1884,7 +1884,7 @@ Graphs & 28 \\
 \midrule
 \bottomrule
 \end{tabular}
-\caption{Some random stats}.
+\caption{Some random stats.}
 \label{tab:my-table}
 \end{table}
 
