Tons of modifications in order to run the experiments. +Some Refactoring.

--- a/utils/Graphs/Throughput.ipynb
+++ b/utils/Graphs/Throughput.ipynb
@@ -12,12 +12,13 @@
     "4. 20, pc2133  - committee : 50\n",
     "5. 20, dl380g3 - committee : 50\n",
     "6. 20, dl380g3 - committee : {5, 10, 20, 50, 100, 200} (not finished)\n",
-    "7. 20, dl380g3 - committee : {5, 10, 20, 50, 100, 200} "
+    "7. 20, dl380g3 - committee : {5, 10, 20, 50, 100, 200} \n",
+    "8. 20 MicroCloud - committee : 50  duration : {200, 500, 1000,2000,5000} "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -289,6 +290,140 @@
     "plt.title(\"20 dl380g3 | Registration duration : \"+str(parameters[0][1]/1000)+\"s\")\n",
     "plt.legend([\"Committee size : \"+str(p[0]) for p in parameters])\n",
     "plt.savefig(\"Experiment3.pdf\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(50, 200), (50, 500), (50, 1000), (50, 2000), (50, 5000)]\n",
+      "[50, 250, 500, 750, 1000, 50, 250, 500, 750, 1000, 50, 250, 500, 750, 1000, 50, 250, 500, 750, 1000, 50, 250, 500, 750, 1000]\n",
+      "5\n",
+      "50 0\n",
+      "250 0\n",
+      "500 0\n",
+      "750 0\n",
+      "1000 0\n",
+      "50 1\n",
+      "250 1\n",
+      "500 1\n",
+      "750 1\n",
+      "1000 1\n",
+      "50 2\n",
+      "250 2\n",
+      "500 2\n",
+      "750 2\n",
+      "1000 2\n",
+      "50 3\n",
+      "250 3\n",
+      "500 3\n",
+      "750 3\n",
+      "1000 3\n",
+      "50 4\n",
+      "250 4\n",
+      "500 4\n",
+      "750 4\n",
+      "1000 4\n",
+      "[50, 250, 500, 750, 1000] [0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[50, 250, 500, 750, 1000] [0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[50, 250, 500, 750, 1000] [0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[50, 250, 500, 750, 1000] [0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[50, 250, 500, 750, 1000] [100.0, 13.200000000000001, 0.0, 0.0, 0.0]\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../../simulation/Archive/arch9.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-d96259a99343>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mdisp_runs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mArchive\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mArchives\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mnodes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mruns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparameters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparse_archive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mArchive\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mruns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-f0bca240b9cc>\u001b[0m in \u001b[0;36mparse_archive\u001b[0;34m(Archive)\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0mparameters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mnodes_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../../simulation/Archive/arch\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mArchive\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\".txt\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0mmatches_it\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfinditer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mregex_parameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../../simulation/Archive/arch9.txt'"
+     ]
+    }
+   ],
+   "source": [
+    "committee = 50\n",
+    "time = 10\n",
+    "Archives = [8,9]\n",
+    "\n",
+    "def get_frequency(l):\n",
+    "    seen = []\n",
+    "    for i, e in enumerate(l):\n",
+    "        if e in seen:\n",
+    "            return i\n",
+    "        seen.append(e)\n",
+    "    return len(l)\n",
+    "\n",
+    "\n",
+    "vals = [[]]\n",
+    "disp_runs = [[]]\n",
+    "for Archive in Archives:\n",
+    "    nodes, runs, _, parameters = parse_archive(Archive)\n",
+    "    print(parameters)\n",
+    "    print(runs)\n",
+    "\n",
+    "    frequency = get_frequency(runs)\n",
+    "    print(frequency)\n",
+    "    _, df =  process_df(nodes, runs, frequency)\n",
+    "\n",
+    "    old_r = 0\n",
+    "    k=0\n",
+    "    for i,r in enumerate(runs):\n",
+    "        if old_r > r:\n",
+    "            vals.append([])\n",
+    "            disp_runs.append([])\n",
+    "            k = k+1\n",
+    "        print(r, k)\n",
+    "        old_r = r\n",
+    "\n",
+    "        dfr = df.loc[df[\"Run\"]==r]\n",
+    "        nodes_count = {}\n",
+    "        to_drop = []\n",
+    "        for row in dfr.iterrows():\n",
+    "            Nodes = row[1][0]\n",
+    "            nodes_count[Nodes] = nodes_count.get(Nodes, -1) + 1\n",
+    "            if nodes_count[Nodes] != k:\n",
+    "                to_drop.append(row[0])\n",
+    "        dfr = dfr.drop(to_drop)\n",
+    "        vals[-1].append(dfr.loc[df[\"Succeed\"]==True].shape[0]/r*100)\n",
+    "        disp_runs[-1].append(r)\n",
+    "\n",
+    "    for i, (r,v) in enumerate(zip(disp_runs, vals)):\n",
+    "        print(r,v)\n",
+    "\n",
+    "\n",
+    "\n",
+    "%config InlineBackend.figure_format = 'retina'\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "ticks = set()\n",
+    "plt.figure(figsize=(8,5))\n",
+    "for i, (r,v) in enumerate(zip(reversed(disp_runs), reversed(vals))):\n",
+    "    plt.plot(r, v, \"-\", linewidth=2*len(vals)-2*i)\n",
+    "ticks = ticks.union(set(runs))\n",
+    "plt.xlabel(\"Nb of Nodes\")\n",
+    "plt.ylabel(\"Throughput [%]\")\n",
+    "plt.xticks(list(ticks))\n",
+    "plt.grid(True)\n",
+    "plt.title(\"20 MicroCloud | Committee size : \"+str(parameters[0][0]))\n",
+    "plt.legend([\"Registration duration : \"+str(p[1]/1000) for p in reversed(parameters)])\n",
+    "plt.savefig(\"Experiment4.pdf\")\n",
     "plt.show()"
    ]
   },
